Fixed a bug where invisible tinymce related elements were partially obscuring the checkbox below them

--- a/manager/css/style.css
+++ b/manager/css/style.css
@@ -111,6 +111,6 @@
 	border: none;
 }
 
-.external-modules-input-td .mce-statusbar .mce-container-body {
-	height: 0px;
+.external-modules-input-td .mce-path {
+	display: none;
 }
